# oat2dex

./: CMakeLists.txt  StringPiece.cpp  StringPiece.h  base.h  main.cpp  oatparser.h
elf/: elfcpp.h  elfcpp_file.h  elfloader.cpp  map_file.h  util.h
oat/: DexHeader.cpp  DexHeader.h  OATHeader.cpp  OATHeader.h  OATParser.cpp  OATParser.h
